Write down the card's half of the engine